# bazel-registry

./: MODULE.bazel  README.md
modules/apsi/: metadata.json
modules/arrow/: metadata.json
modules/aws_c_common/: metadata.json
modules/aws_c_event_stream/: metadata.json
modules/aws_checksums/: metadata.json
modules/aws_sdk_cpp/: metadata.json
modules/brpc/: metadata.json
modules/cpu_features/: metadata.json
modules/dataproxy/: metadata.json
modules/eigen/: metadata.json
modules/emp-ot/: metadata.json
modules/emp-tool/: metadata.json
modules/fourqlib/: metadata.json
modules/hash_drbg/: metadata.json
modules/heu/: metadata.json
modules/ippcp/: metadata.json
modules/kuku/: metadata.json
modules/kuscia/: metadata.json
modules/leveldb/: metadata.json
modules/lib25519/: metadata.json
modules/libdivide/: metadata.json
modules/libsodium/: metadata.json
modules/libtommath/: metadata.json
modules/llvm-raw/: metadata.json
modules/log4cplus/: metadata.json
modules/mcl/: metadata.json
modules/microsoft_gsl/: metadata.json
modules/ncurses/: metadata.json
modules/openssl/: metadata.json
modules/orc/: metadata.json
modules/org_interconnection/: metadata.json
modules/pailliercryptolib/: metadata.json
modules/perfetto/: metadata.json
modules/protobuf/: metadata.json
modules/psi/: metadata.json
modules/seal/: metadata.json
modules/simplest-ot/: metadata.json
modules/sparsehash/: metadata.json
modules/spulib/: metadata.json
modules/sse2neon/: metadata.json
tools/: update_sha256_for_source.py
(+252 files in other folders)
